[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_pdf"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "icecream==2.1.3",
    "pypdf==3.17.0",
    "Pillow==10.1.0",
    "ak_file==0.1.4"
]

[project.optional-dependencies]
test = [
    "pytest"
]

dev = [
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_pdf"

[project.scripts]
app="ak_pdf.cli_app:app"